--- a/k8s-yamls/internaldeployment.yaml
+++ b/k8s-yamls/internaldeployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: demo-api
         image: gcr.io/dtcjuly2021-101/internal-image:v1.0.0
+        env: 
+        - name: GOOGLE_CLOUD_PROJECT
+          value: dtcjuly2021-101
         ports:
         - containerPort: 8082
             
